# shrtr

./: Cargo.toml
src/: main.rs
src/routes/: mod.rs
