[package]
name = "shrtr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.3", features = ["http2"] }
tower= { version = "0.4", features = ["full"] }
tower-http = { version = "0.1", features = ["full"] }
handlebars = "4"
tracing = "0.1"
tracing-subscriber = "0.3"
sea-orm = "0.3"
serde = { version = "1", features = ["derive"] }
